@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 497f99caddb43d0b46c17878ae5bc2057979e695 ChangeLog
+SHA1 8e3da36411897cc63e41ece2462f81d9d4bfc194 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 c7274f15327f706369e28855c64f2d2626ac5793 META.yml
+SHA1 87048b6f8d8ffbeb800a94093f56fe9083d43953 META.yml
 SHA1 85f9401b2c422cd079d521911905670a71d266c1 Makefile.PL
 SHA1 8b673061939e72411e4b717b9fd77b4954e33d70 README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,17 +31,17 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 5911571eb4ec8ddd17e53dbe495db446f750cfde lib/Term/Menus.pm
+SHA1 ebad943d820564dfc18d01d961acb91352d6cb9f lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.13 (Cygwin)
 
-iQEcBAEBAgAGBQJRv3n8AAoJEBa/9Pad787EGm4H/AkXYB0ZQiYo3yNyBZXCQL5P
-r1l3txlbLBVtr33hNemtY7kQPHhGiQkhd1lauT8Mui0cLBi2cdmIdPYUzW+VpFsH
-e74x0IJPJrnV2LksRF8XgXRAmwZZgCwwaD4rueIpz3NwLY5to0IAnpNT6RFYc/62
-q1/EEZUM5eXsIS43msx7MWUqDF7epqYsu7VABsDftU/JLNmYVhoKJbHQAqj7QFlV
-Yrno0MKyFKgS5aLnhwlWoQBPMCUGZvgclf0w6wFw2aV43g9XRrU/m42hPfKUpH56
-oaCZY0qxWWST+a7Vk2iyzvfPTS5oMxOt8A3fQ7VARhWs2/5G6Saba66i3LXsf6A=
-=eonR
+iQEcBAEBAgAGBQJRwNGJAAoJEBa/9Pad787E0tgH/RBYcBWAuYYUiNs7hI8bH/J0
+Yvs/jPVBhDzTvzveU2Ods+tMOyhxtuvJl3Qa5HtvfgRekQCkItKLwTWeeE9Nt/BP
+7uPUk5LFYaQiCfxouvBT85Fo4+SS2bMjbTzfBLQ5r9nTbhV6L40M36c3erC54JpH
+C/LtrgSlVWl9qr5ztZMWKk3B0YHM/FYHW2WJColKBbPma14zmQKsH7seKeatMUEi
+BkH5r5Dx3pDTuqcLSPc8RIinUGSn5WAeNXepzYH2x1yy8LojCrn7xpk8F/o2RDnX
+FIrT4PXFgBytbSzD7Xj+6jan08bsfXUnWoYUxUoMNVVUB0vhFpfvWujBmuuQCWw=
+=D5Zb
 -----END PGP SIGNATURE-----
