@@ -1,3 +1,12 @@
+2013-06-18  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 2.29 released.
+
+        * More work on result block. Documentation updated
+          to illustrate use of Anonymous Subroutines with
+          result items.
+
+
 2013-06-17  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 2.28 released.
